[package]
name = "easrvr_alarm_listener"
version = "0.1.0"
authors = ["cannotilever <cannotilever@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.4"